--- a/index.html
+++ b/index.html
@@ -5,6 +5,27 @@
     <title>WAP-MAY-2020</title>
 </head>
 <body>
-<h2> Bernabas</h2>
+<img src="res/my_pic.jpg" alt="My Picture">
+<h1> Bernabas Tesfaye</h1>
+<ul>
+    <li>Lesson 1
+        <ul>
+            <li> <a href="">Exercise 1</a> </li>
+            <li> <a href="">Exercise 2</a> </li>
+            <li> <a href="">Exercise 3</a> </li>
+        </ul>
+    </li>
+
+    <li>Lesson 2</li>
+    <li> Lesson 3</li>
+
+</ul>
+<p>
+    <a href="https://validator.w3.org/check/referer">
+        <img src="html5_validator.png" alt="Validate" />
+    </a>
+</p>
+
 </body>
+
 </html>
