--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <ul>
     <li>Lesson 1
         <ul>
-            <li> <a href="">Exercise 1</a> </li>
+            <li> <a href="pages/lesson1/ex1.html">Exercise 1:validator link will not work when you try locally in your machine. </a> </li>
             <li> <a href="">Exercise 2</a> </li>
             <li> <a href="">Exercise 3</a> </li>
         </ul>
@@ -22,7 +22,7 @@
 </ul>
 <p>
     <a href="https://validator.w3.org/check/referer">
-        <img src="html5_validator.png" alt="Validate" />
+        <img src="res/html5_validator.png" alt="Validate" width="100em" />
     </a>
 </p>
 
