--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </ul>
 <p>
     <a href="https://validator.w3.org/check/referer">
-        <img src="res/html5_validator.png" alt="Validate" width="100em" />
+        <img src="http://mumstudents.org/cs472/images/w3c-html.png" alt="Validate" />
     </a>
 </p>
 
