Lesson 2 About Me HTML

--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
         </ul>
     </li>
 
-    <li>Lesson 2</li>
+    <li>Lesson 2
+      <ul>
+          <li><a href="about_me/index.html">About Me</a> </li>
+      </ul></li>
+
     <li> Lesson 3</li>
 
 </ul>
