Lesson 2 About Me HTML + fix

--- a/about_me/index.html
+++ b/about_me/index.html
@@ -26,7 +26,7 @@
     <li>Star Trek Episode V with Zazu (<a href="">IMDB</a> )</li>
     <li>Fight CLub (not really,but I've seen like 3 movies total so this is my 3<sup>rd</sup> fave by technically)(<a href="">IMDB</a> )</li>
 </ol>
-<p> Happy: <img src="res/12.JPG"> Sad:<img src="res/2.JPG"></p>
+<p> Happy: <img src="res/12.JPG" alt="Happy"> Sad:<img src="res/2.JPG" alt="Sad"></p>
 <h2> Fun Facts About My Neighbors</h2>
 <ul>
     <li>Sue SMith: <em>Effervescent</em> is a word that describes her.</li>
