--- a/about_me/index.html
+++ b/about_me/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>About ame</title>
+    <title>About me</title>
 </head>
 <body>
 <hr>
