--- a/about_me/index.html
+++ b/about_me/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>About Me</title>
+    <link href="res/style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
 <hr>
@@ -37,7 +38,7 @@
     <a href="https://validator.w3.org/check/referer">
         <img src="http://mumstudents.org/cs472/images/w3c-html.png" alt="Validate" />
     </a>
-    <a href="https://validator.w3.org/check/referer">
+    <a href="https://jigsaw.w3.org/css-validator/check/referer">
         <img src="http://mumstudents.org/cs472/images/w3c-css.png" alt="Validate" />
     </a>
 </p>
