Lesson 2 About Me CSS

--- a/about_me/index.html
+++ b/about_me/index.html
@@ -23,9 +23,17 @@
 <h2> My Favorite Movie</h2>
 <p><em> ( I actually don't watch too many movies, so..here goes</em></p>
 <ol>
-    <li>The last 30 minutes of Forrest Gump (<a href="">IMDB</a>)</li>
-    <li>Star Trek Episode V with Zazu (<a href="">IMDB</a> )</li>
-    <li>Fight CLub (not really,but I've seen like 3 movies total so this is my 3<sup>rd</sup> fave by technically)(<a href="">IMDB</a> )</li>
+    <li>The last 30 minutes of Forrest Gump (<a href="https://www.imdb.com/?ref_=nv_home">IMDB</a>)
+      <dl>
+          <dt>Director</dt> <dd>Robert Zemeckis</dd>
+          <dt>Genre</dt> <dd> Comedy / Drama / Romance (<a href="https://www.imdb.com/?ref_=nv_home">more</a> )</dd>
+          <dt>Tagline</dt> <dd> The world will never be the same once you've seen it through the eyes of Forrest Gump</dd>
+          <dt>Plot Outline</dt> <dd> Forrest Gump, while not intelligent, has accidentally been present (<a href="https://www.imdb.com/?ref_=nv_home">more</a> )</dd>
+      </dl>
+    </li>
+
+    <li>Star Trek Episode V with Zazu (<a href="https://www.imdb.com/?ref_=nv_home">IMDB</a> )</li>
+    <li>Fight CLub (not really,but I've seen like 3 movies total so this is my 3<sup>rd</sup> fave by technically)(<a href="https://www.imdb.com/?ref_=nv_home">IMDB</a> )</li>
 </ol>
 <p> Happy: <img src="res/12.JPG" alt="Happy"> Sad:<img src="res/2.JPG" alt="Sad"></p>
 <h2> Fun Facts About My Neighbors</h2>
