--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <li>Lesson 2
       <ul>
           <li><a href="about_me/index.html">About Me</a> </li>
-          <li><a href="%20recipe/pie.html" >Recipe</a></li>
+          <li><a href="recipe/pie.html" >Recipe</a></li>
       </ul></li>
 
     <li> Lesson 3</li>
