Lesson 2 Recipe + fix

--- a/ recipe/pie.html
+++ b/ recipe/pie.html
@@ -9,7 +9,7 @@
 <body>
 <!-- I completed background ,favicon , Pie bullet ,Tight heading background-->
 <h2 class="title" ><span>Grandma's Lemon Meringue Pie</span></h2>
-<img src="res/images/pie.jpg">
+<img src="res/images/pie.jpg" alt="PIE">
 <p>
     One 9-inch pie <br>
     30 Min - Prep time <br>
