Lab 5 Assignment + Fix

--- a/lab5/text_decorator/index.html
+++ b/lab5/text_decorator/index.html
@@ -31,7 +31,7 @@
 </fieldset>
 <fieldset>
     <legend> Decoration</legend>
-    <button type="button" onclick="big_decoration()">Bigger Decoration</button> <br>
+    <button type="button" onclick="setInterval(big_decoration,500);">Bigger Decoration</button> <br>
     <label> <input type="checkbox" id="bling" onchange="bling()"> Bling</label>
 </fieldset>
 
