--- a/Assignments/Lesson2/recipe/pie.html
+++ b/Assignments/Lesson2/recipe/pie.html
@@ -84,7 +84,7 @@
 
 <h2><span> Links </span></h2>
 <p> <a href="https://www.google.com/search?q=lemon+meringue+pie+recipe&start=10">Search for other lemon meringue pie recipes</a> </p>
-<p><a href="/bernabas/index.html">Home</a> </p>
+<p><a href="/bernabas/Assignments/res/index.html">Home</a> </p>
 
 <pre>
     Copyright Â© 2012 Granny's Pies
