--- a/Assignments/Lesson3/hw2/index.html
+++ b/Assignments/Lesson3/hw2/index.html
@@ -6,7 +6,7 @@
     <title>TMNT - Rancid Tomatoes</title>
     <link rel="icon" type="image/gif" href="skeleton_files/rotten.gif">
 
-    <link href="./skeleton_files/movie.css" type="text/css" rel="stylesheet">
+    <link href="skeleton_files/movie.css" type="text/css" rel="stylesheet">
 </head>
 
 <body>
