--- a/Assignments/Lesson3/hw2/index.html
+++ b/Assignments/Lesson3/hw2/index.html
@@ -205,8 +205,8 @@
 
 
 <div class="validator">
-    <a href="http://validator.w3.org/check/referer"><img src="skeleton_files/w3c-html.png" alt="Valid HTML5"></a> <br>
-    <a href="http://jigsaw.w3.org/css-validator/check/referer"><img src="skeleton_files/w3c-css.png"
+    <a href="http://validator.w3.org/check/referer"><img src="/bernabas/resources/assets/img/w3c-html.png" alt="Valid HTML5"></a> <br>
+    <a href="http://jigsaw.w3.org/css-validator/check/referer"><img src="/bernabas/resources/assets/img/w3c-css.png"
                                                                     alt="Valid CSS"></a>
 </div>
 
