--- a/index.html
+++ b/index.html
@@ -87,6 +87,15 @@
 
                         </div>
                     </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Lesson 6</h3>
+
+                            <div class="subheading mb-3"><a href="Assignments/Lesson6/"> ASCII Animation </a> </div>
+
+
+                        </div>
+                    </div>
                 </div>
 
             </section>
