Lesson 6 : ASCII Animation

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Lesson 6</h3>
 
-                            <div class="subheading mb-3"><a href="Assignments/Lesson6/"> ASCII Animation </a> </div>
+                            <div class="subheading mb-3"><a href="Assignments/Lesson6/"> ASCII Animation Viewer </a> </div>
 
 
                         </div>
