--- a/Assignments/Lesson6/index.html
+++ b/Assignments/Lesson6/index.html
@@ -32,12 +32,12 @@
     <fieldset>
         <legend> Size:</legend>
         <select id="size">
-            <option value="tiny">Tiny</option>
-            <option value="small">Small</option>
-            <option value="medium" selected>Medium</option>
-            <option value="large">Large</option>
-            <option value="extraLarge">Extra Large</option>
-            <option value="xxl">XXL</option>
+            <option value="7">Tiny</option>
+            <option value="10">Small</option>
+            <option value="12" selected>Medium</option>
+            <option value="16">Large</option>
+            <option value="24">Extra Large</option>
+            <option value="32">XXL</option>
         </select>
     </fieldset>
     <fieldset>
