--- a/index.html
+++ b/index.html
@@ -96,6 +96,15 @@
 
                         </div>
                     </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Lesson 7</h3>
+
+                            <div class="subheading mb-3"><a href="Assignments/Lesson7/"> Module and Closures</a> </div>
+
+
+                        </div>
+                    </div>
                 </div>
 
             </section>
