--- a/index.html
+++ b/index.html
@@ -1,122 +1,152 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
-        <title>Wap - Lab Assignments</title>
-        <link rel="icon" type="image/x-icon" href="resources/assets/img/favicon.png" />
-        <!-- Font Awesome icons (free version)-->
-        <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
-        <!-- Google fonts-->
-        <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" type="text/css" />
-        <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
-        <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="resources/css/styles.css" rel="stylesheet" />
-    </head>
+<head>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+    <meta name="description" content=""/>
+    <meta name="author" content=""/>
+    <title>Wap - Lab Assignments</title>
+    <link rel="icon" type="image/x-icon" href="resources/assets/img/favicon.png"/>
+    <!-- Font Awesome icons (free version)-->
+    <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
+    <!-- Google fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet"
+          type="text/css"/>
+    <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css"/>
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="resources/css/styles.css" rel="stylesheet"/>
+</head>
 
-    <body id="page-top">
-        <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
-            <a class="navbar-brand js-scroll-trigger" href="#page-top"
-                ><span class="d-block d-lg-none">Bernabas Demisse</span><span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="resources/assets/img/my_pic.jpg" alt="" /></span></a
-            ><button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">HOME</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Assignment</a></li>
+<body id="page-top">
+<!-- Navigation-->
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
+    <a class="navbar-brand js-scroll-trigger" href="#page-top"
+    ><span class="d-block d-lg-none">Bernabas Demisse</span><span class="d-none d-lg-block"><img
+            class="img-fluid img-profile rounded-circle mx-auto mb-2" src="resources/assets/img/my_pic.jpg"
+            alt=""/></span></a
+    >
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span
+            class="navbar-toggler-icon"></span></button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav">
+            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">HOME</a></li>
+            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Assignment</a></li>
 
-                </ul>
-            </div>
-        </nav>
-        <!-- Page Content-->
-        <div class="container-fluid p-0">
-            <!-- About-->
-            <section class="resume-section" id="about">
-                <div class="resume-section-content">
-                    <h1 class="mb-0">Bernabas <span class="text-primary">Demisse</span></h1>
-                    <div class="subheading mb-5">Feb <a href="mailto:name@email.com">2020</a></div>
-                    <p>
-                        <a href="https://validator.w3.org/check/referer">
-                            <img src="http://mumstudents.org/cs472/images/w3c-html.png" alt="Validate" />
-                        </a>
-                    </p>
-
-                </div>
-            </section>
-            <hr class="m-0" />
-            <!-- Experience-->
-            <section class="resume-section" id="experience">
-                <div class="resume-section-content">
-                    <h2 class="mb-5">Assignments</h2>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Lesson 1</h3>
-                            <div class="subheading mb-3"><a href="Assignments/Lesson1/ex1.html">Assignment 1</a> </div>
-                             </div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Lesson 2</h3>
-                            <div class="subheading mb-3"><a href="Assignments/Lesson2/about_me/index.html"> About Me</a> </div>
-                            <div class="subheading mb-3"><a href="Assignments/Lesson2/recipe/pie.html"> Granny's Pies</a> </div>
-
-                        </div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Lesson 3</h3>
-                            <div class="subheading mb-3"><a href="Assignments/Lesson3/hw2/indx.html"> TMNT</a> </div>
-
-                        </div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Lesson 4</h3>
-                            <div class="subheading mb-3"><a href="Assignments/Lesson4/Checkout_form/index.html"> checkout Form</a> </div>
-
-                        </div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Lesson 5</h3>
-                            <div class="subheading mb-3"><a href="Assignments/Lesson5/text_decorator/index.html"> Text Decoration</a> </div>
-                            <div class="subheading mb-3"><a href="Assignments/Lesson5/tip_calculator/index.html"> Tip Calculator </a> </div>
-
-
-                        </div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Lesson 6</h3>
-
-                            <div class="subheading mb-3"><a href="Assignments/Lesson6/"> ASCII Animation Viewer </a> </div>
-
-
-                        </div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Lesson 7</h3>
-
-                            <div class="subheading mb-3"><a href="Assignments/Lesson7/"> Module and Closures</a> </div>
-
-
-                        </div>
-                    </div>
-                </div>
-
-            </section>
-            <hr class="m-0" />
+        </ul>
+    </div>
+</nav>
+<!-- Page Content-->
+<div class="container-fluid p-0">
+    <!-- About-->
+    <section class="resume-section" id="about">
+        <div class="resume-section-content">
+            <h1 class="mb-0">Bernabas <span class="text-primary">Demisse</span></h1>
+            <div class="subheading mb-5">Feb <a href="mailto:name@email.com">2020</a></div>
+            <p>
+                <a href="https://validator.w3.org/check/referer">
+                    <img src="http://mumstudents.org/cs472/images/w3c-html.png" alt="Validate"/>
+                </a>
+            </p>
 
         </div>
-        <!-- Bootstrap core JS-->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
-        <!-- Third party plugin JS-->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-        <!-- Core theme JS-->
-        <script src="resources/js/scripts.js"></script>
-    </body>
+    </section>
+    <hr class="m-0"/>
+    <!-- Experience-->
+    <section class="resume-section" id="experience">
+        <div class="resume-section-content">
+            <h2 class="mb-5">Assignments</h2>
+            <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                <div class="flex-grow-1">
+                    <h3 class="mb-0">Lesson 1</h3>
+                    <div class="subheading mb-3"><a href="Assignments/Lesson1/ex1.html">Assignment 1</a></div>
+                </div>
+            </div>
+            <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                <div class="flex-grow-1">
+                    <h3 class="mb-0">Lesson 2</h3>
+                    <div class="subheading mb-3"><a href="Assignments/Lesson2/about_me/index.html"> About Me</a></div>
+                    <div class="subheading mb-3"><a href="Assignments/Lesson2/recipe/pie.html"> Granny's Pies</a></div>
+
+                </div>
+            </div>
+            <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                <div class="flex-grow-1">
+                    <h3 class="mb-0">Lesson 3</h3>
+                    <div class="subheading mb-3"><a href="Assignments/Lesson3/hw2/indx.html"> TMNT</a></div>
+
+                </div>
+            </div>
+            <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                <div class="flex-grow-1">
+                    <h3 class="mb-0">Lesson 4</h3>
+                    <div class="subheading mb-3"><a href="Assignments/Lesson4/Checkout_form/index.html"> checkout
+                        Form</a></div>
+
+                </div>
+            </div>
+            <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                <div class="flex-grow-1">
+                    <h3 class="mb-0">Lesson 5</h3>
+                    <div class="subheading mb-3"><a href="Assignments/Lesson5/text_decorator/index.html"> Text
+                        Decoration</a></div>
+                    <div class="subheading mb-3"><a href="Assignments/Lesson5/tip_calculator/index.html"> Tip
+                        Calculator </a></div>
+
+
+                </div>
+            </div>
+            <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                <div class="flex-grow-1">
+                    <h3 class="mb-0">Lesson 6</h3>
+
+                    <div class="subheading mb-3"><a href="Assignments/Lesson6/"> ASCII Animation Viewer </a></div>
+
+
+                </div>
+            </div>
+            <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                <div class="flex-grow-1">
+                    <h3 class="mb-0">Lesson 7</h3>
+
+                    <div class="subheading mb-3"><a href="Assignments/Lesson7/"> Module and Closures</a></div>
+
+
+                </div>
+            </div>
+            <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                <div class="flex-grow-1">
+                    <h3 class="mb-0">Lesson 8</h3>
+
+                    <div class="subheading mb-3"></div>
+
+
+                </div>
+            </div>
+            <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                <div class="flex-grow-1">
+                    <h3 class="mb-0">Lesson 9</h3>
+
+                    <div class="subheading mb-3"><a href="Assignments/Lesson9/index.html">CSE 190 M Fifteen Puzzle</a></div>
+
+
+                </div>
+            </div>
+
+
+
+        </div>
+
+    </section>
+    <hr class="m-0"/>
+
+</div>
+<!-- Bootstrap core JS-->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
+<!-- Third party plugin JS-->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+<!-- Core theme JS-->
+<script src="resources/js/scripts.js"></script>
+</body>
 </html>
