--- a/Assignments/Lesson9/index.html
+++ b/Assignments/Lesson9/index.html
@@ -9,7 +9,7 @@
 		<title>Fifteen Puzzle</title>
 
 		<!-- instructor-provided JavaScript files; do not modify -->
-		<script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
 
 		<!-- your files that you will write -->
